2005-04-27  tekHedd <tekhedd@byteheaven.net>

	* all: (No need to) Fix memory leak. All of the memory bloat is gone 
	with mono 1.1.6. On my system, the memory stabilizes at about 56M. 
	Guess it was just the runtime.

	* Engine: Added a predelay option to the compressor to make the 
	attacks a bit less "pop" prone on faster attack settings. Works OK.

	* all: Build against mono 1.1.6 and latest gtk-sharp/glade-sharp

	* Changed behavior when "Suck" is clicked. Previously the next track 
	was always selected. Now the current track is reevaluated at its new 
	suck level, and may or may not be stopped.

	* Rewrote track consideration/elimination to be more visible. 
	Now, tracks are not rejected until it is actually time to play them.

2004-12-07 tekhedd <tekhedd@byteheaven.net>

	* Engine: Now saves the current logged in user in the database

	* all: The program can now run standalone, not as a client server 
	program, for the simple case where one person is listening.

	* Mp3Sharp: A branch of Mp3Sharp is now located (temporarily) in the 
	tamjb cvs repository.

	* SimpleMp3Player: Mono files no longer play back at double speed, but 
	now they play back only in the left channel. I _guess_ this is an 
	improvement!

	* Engine: Changed the default suck/mood values back to 20%/80%

	* Engine: Add user controls for the compression and limiting. 
	Settings are stored in the database so you don't have to reset 
	them on every reboot.

	* Cut CPU usage by more than half, by rewriting Mp3Sharp's buffering.

2004-07-17

	* GtkPlayer: Added suck/mood percent display in track list.

	* GtkPlayer: You can now modify the attributes of a song that is 
	not playing by selecting it in the list

	* GtkPlayer: New, improved controls layout.

	* Engine: Added compression and soft limiting to even out that 
	listening experience. (May not be suitable for music with long, 
	quiet passages: ie classical. Your mileage may vary.)
