@@ -1,18 +1,16 @@
 #!/sbin/runscript
 # $Id$
 
+# Config file for gentoo-style conf.d
 
-AUDIO_MOUNT=/var/mp3
 # TAMJB_DIRS="--dir /var/mp3/mp3"
 TAMJB_PORT=5432
 TAMJB_DB="file:/home/guest/audio_filez.db"
 TAMJB_LOG="/var/log/tamjb.log"
 TAMJB_PIDFILE=/var/run/tamjb.pid
-TAMJB_NICE_LEVEL=-6
+TAMJB_NICE_LEVEL=0
 
-# TAMJB=/usr/bin/mono
-# TAMJB=/usr/local/bin/tamjb.Server.exe
-TAMJB=$AUDIO_MOUNT/jukebox/server_wrap.sh
+TAMJB=/usr/local/lib/tamjb.Server.exe
 
 # Options for SQLite
 # TAMJBOPTIONS="--trace --lifeSpan 20 --bufferSize 8192 --bufferCount 4 --dbUrl $TAMJB_DB --port $TAMJB_PORT $TAMJB_DIRS --logFile $TAMJB_LOG"
